# pykoclaw-whatsapp

./: .gitignore  README.md  pyproject.toml
src/pykoclaw_whatsapp/: __init__.py  attachments.py  auth.py  config.py  connection.py  formatting.py  handler.py  images.py  queue.py  routing.py  segments.py
tests/: test_attachments.py  test_batch.py  test_config.py  test_connection.py  test_formatting.py  test_handler.py  test_queue.py  test_routing.py  test_wa_images.py  test_wa_segments.py  test_whatsapp_plugin.py
