[project]
name = "pykoclaw-whatsapp"
version = "0.1.0"
description = "WhatsApp plugin for pykoclaw"
requires-python = ">=3.12"
dependencies = ["pykoclaw", "neonize>=0.3.14", "click", "qrcode"]

[tool.uv.sources]
pykoclaw = { workspace = true }

[project.entry-points."pykoclaw.plugins"]
whatsapp = "pykoclaw_whatsapp:WhatsAppPlugin"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]
